# ibex-demo-system

./: .gitignore  Makefile  ibex_demo_system.core  pulp_riscv_dbg.core  sourceme.sh
data/: pins_artya7.xdc
rtl/system/: ibex_demo_system.sv
sw/: rgb565_logom.py
sw/c/: gcc_toolchain.cmake
sw/c/demo/: CMakeLists.txt
sw/c/demo/dhrystone/: CMakeLists.txt  dhry.h  dhry_1.c  dhry_2.c  dhry_main.c  dhry_minimal.c  dhry_utils.c
sw/c/demo/lcd_st7735/: hny_logo.h  main.c.1
sw/c/demo/timer_test/: CMakeLists.txt  main.c
sw/common/: link.ld
util/: arty-a7-openocd-cfg.tcl  firework_generator.py  fireworks.py  fireworks_frames.h  rgb565_logo.py  rgb565_logom.py
